Add blog post checklist

--- a/apps/blog/src/pages/blog/index.astro
+++ b/apps/blog/src/pages/blog/index.astro
@@ -3,6 +3,13 @@ import Layout from '../../layouts/Layout.astro';
 
 const posts = [
   {
+    title: "The Ultimate Blog Post Checklist",
+    description: "A comprehensive guide to creating better, more engaging blog posts",
+    date: "2024-03-26",
+    slug: "blog-post-checklist",
+    layout: "featured"
+  },
+  {
     title: "Getting Started with Astro",
     description: "Learn how to build fast websites with Astro and Tailwind CSS",
     date: "2024-03-15",
