--- a/apps/blog/src/layouts/BlogLayout.astro
+++ b/apps/blog/src/layouts/BlogLayout.astro
@@ -18,7 +18,7 @@ const { title, date, description } = Astro.props;
         <time datetime={date}>{new Date(date).toLocaleDateString()}</time>
       </div>
     </header>
-    <div class="prose prose-lg max-w-none">
+    <div class="prose prose-lg max-w-none prose-p:mb-6 prose-p:last:mb-0">
       <slot />
     </div>
   </article>
