Only use one layout for blogs

--- a/apps/blog/src/pages/blog/[...slug].astro
+++ b/apps/blog/src/pages/blog/[...slug].astro
@@ -1,7 +1,6 @@
 ---
 import { getCollection } from 'astro:content';
 import BlogLayout from '../../layouts/BlogLayout.astro';
-import FeaturedBlogLayout from '../../layouts/FeaturedBlogLayout.astro';
 
 export async function getStaticPaths() {
   const posts = await getCollection('blog');
@@ -13,15 +12,12 @@ export async function getStaticPaths() {
 
 const { post } = Astro.props;
 const { Content } = await post.render();
-
-// Choose layout based on frontmatter
-const Layout = post.data.layout === 'featured' ? FeaturedBlogLayout : BlogLayout;
 ---
 
-<Layout
+<BlogLayout
   title={post.data.title}
   date={post.data.date}
   description={post.data.description}
 >
   <Content />
-</Layout> 
+</BlogLayout> 
